package com.bupt.colorfulroute.runningapp.uicomponent.scaleview;

/**
 * Copyright (c) 2017, Bongmi
 * All rights reserved
 * Author: xuyuanyi@bongmi.com
 */

public interface OnValueChangeListener {
  void onValueChanged(float value);
}
