@startuml

title __SCALEVIEW's Class Diagram__\n

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      package com.bupt.colorfulroute.runningapp.uicomponent.scaleview {
        class HorizontalScaleView {
            - SCALE_WIDTH_BIG : int
            - SCALE_WIDTH_SMALL : int
            - LINE_WIDTH : int
            - rectPadding : int
            - rectWidth : int
            - rectHeight : int
            - maxScaleLength : int
            - midScaleLength : int
            - minScaleLength : int
            - scaleSpace : int
            - scaleSpaceUnit : int
            - height : int
            - width : int
            - ruleHeight : int
            - max : int
            - min : int
            - borderLeft : int
            - borderRight : int
            - midX : float
            - originMidX : float
            - minX : float
            - lastX : float
            - originValue : float
            - currentValue : float
            - paint : Paint
            - context : Context
            - descri : String
            - unit : String
            - velocityTracker : VelocityTracker
            - velocity : float
            - a : float
            - continueScroll : boolean
            - isMeasured : boolean
            - mHandler : Handler
            + HorizontalScaleView()
            + HorizontalScaleView()
            + HorizontalScaleView()
            - init()
            + setRange()
            + setUnit()
            + setDescri()
            + setOnValueChangeListener()
            # onMeasure()
            # onDraw()
            + onTouchEvent()
            - calculateCurrentScale()
            - confirmBorder()
            - continueScroll()
        }
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      package com.bupt.colorfulroute.runningapp.uicomponent.scaleview {
        interface OnValueChangeListener {
            {abstract} + onValueChanged()
        }
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.uicomponent {
      package com.bupt.colorfulroute.runningapp.uicomponent.scaleview {
        class VerticalScaleView {
            - SCALE_WIDTH_BIG : int
            - SCALE_WIDTH_SMALL : int
            - LINE_WIDTH : int
            - rectPadding : int
            - rectHeight : int
            - maxScaleLength : int
            - midScaleLength : int
            - minScaleLength : int
            - scaleSpace : int
            - scaleSpaceUnit : int
            - height : int
            - width : int
            - ruleWidth : int
            - max : int
            - min : int
            - borderUp : int
            - borderDown : int
            - midY : float
            - originMidY : float
            - minY : float
            - lastY : float
            - originValue : float
            - currentValue : float
            - paint : Paint
            - context : Context
            - descri : String
            - unit : String
            - velocityTracker : VelocityTracker
            - velocity : float
            - a : float
            - continueScroll : boolean
            - isMeasured : boolean
            - mHandler : Handler
            + VerticalScaleView()
            + VerticalScaleView()
            + VerticalScaleView()
            - init()
            + setRange()
            + setUnit()
            + setDescri()
            + setOnValueChangeListener()
            # onMeasure()
            # onDraw()
            + onTouchEvent()
            - calculateCurrentScale()
            - confirmBorder()
            - continueScroll()
        }
      }
    }
  }
  

  HorizontalScaleView -up-|> View
  HorizontalScaleView o-- OnValueChangeListener : onValueChangeListener
  BaseSavedState -up-|> AbsSavedState
  VerticalScaleView -up-|> View
  VerticalScaleView o-- OnValueChangeListener : onValueChangeListener
  BaseSavedState -up-|> AbsSavedState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
